[package]
name = "ccntool_gui"
authors = ["Tim Biermann <tim.biermann@hs-duesseldorf.de>"]
version = "0.2.1"
edition = "2021"
rust-version = "1.67"
description = "gui frontend for ccntool_core"
readme = "../README.md"
homepage = "https://cit.hs-duesseldorf.de/profil/cc-netze"
publish = false

[dependencies]
ccntool_core = { path = "../ccntool_core" }
dotenvy = "0.15.7"
eframe = { version = "0.21.3", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui-dropdown = "0.2.1"
egui = { version = "0.21.0", default-features = false }
serde = { version = "1", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
