[package]
name = "ccntool_gui"
authors = ["Tim Biermann <tim.biermann@hs-duesseldorf.de>"]
version = "0.2.2"
edition = "2021"
rust-version = "1.67"
description = "gui frontend for ccntool_core"
readme = "../README.md"
homepage = "https://cit.hs-duesseldorf.de/profil/cc-netze"
publish = false
build = "build.rs"

[dependencies]
ccntool_core = { path = "../ccntool_core" }
dotenvy = "0.15.7"
eframe = { version = "0.22.0", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui-dropdown = "0.3.0"
egui = { version = "0.22.0", default-features = false }
serde = { version = "1", default-features = false }

[target.'cfg(windows)'.build-dependencies]
tauri-winres = { git = "https://github.com/tauri-apps/winres", branch = "main" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
image = "0.24.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
